@@ -1,34 +1,46 @@
-unsigned char sid_18758_gz[] = {
-  0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0x03, 0x3d, 0x8f,
-  0x6f, 0x6b, 0xdb, 0x30, 0x10, 0xc6, 0xdf, 0xe7, 0x53, 0x1c, 0x5e, 0x5e,
-  0xb4, 0x90, 0x3f, 0x6c, 0xa3, 0xb4, 0xa8, 0xb0, 0xb1, 0x31, 0x97, 0x06,
-  0xda, 0xb4, 0x74, 0xa6, 0xdb, 0x58, 0x46, 0x38, 0xcb, 0xe7, 0xe4, 0x98,
-  0x22, 0x79, 0xba, 0xb3, 0xd3, 0x40, 0x3f, 0xfc, 0xe4, 0x3a, 0xad, 0xde,
-  0x9c, 0xee, 0x7e, 0x8f, 0x9e, 0xd3, 0x83, 0x8e, 0xa2, 0x82, 0xda, 0x06,
-  0xc6, 0xd7, 0x77, 0xb7, 0xf9, 0x7a, 0x99, 0x17, 0x80, 0xfe, 0x00, 0xd3,
-  0x4f, 0x30, 0xce, 0x7f, 0x16, 0xf9, 0xc3, 0xf2, 0xcb, 0xcd, 0xcb, 0x70,
-  0x7c, 0x5d, 0x14, 0xf7, 0xeb, 0xfb, 0xbb, 0x87, 0xe2, 0xfb, 0xe8, 0x64,
-  0x04, 0xe9, 0xec, 0x64, 0x63, 0xb2, 0xab, 0xc5, 0x4d, 0x3e, 0x5d, 0x7c,
-  0xcb, 0x97, 0xc5, 0xe2, 0xea, 0x17, 0xdc, 0xb2, 0x8d, 0x41, 0x42, 0xad,
-  0xf0, 0x83, 0x7d, 0x15, 0xf6, 0x02, 0x8f, 0x2c, 0x2d, 0x3a, 0xf8, 0x8a,
-  0xc2, 0x16, 0xc4, 0x46, 0x6e, 0x14, 0x6a, 0x76, 0x04, 0x89, 0x7a, 0x17,
-  0xb0, 0x82, 0x48, 0xff, 0x5a, 0x12, 0xcd, 0x2e, 0x07, 0x53, 0x52, 0xac,
-  0x50, 0xd1, 0x08, 0xc5, 0x8e, 0x2d, 0xc1, 0x56, 0xb5, 0x19, 0x50, 0xa4,
-  0x9a, 0x22, 0x79, 0x4b, 0xa6, 0x8d, 0x6e, 0x42, 0x7e, 0xb6, 0xe7, 0xbf,
-  0xdc, 0x50, 0xc5, 0x38, 0x0b, 0x71, 0x33, 0xef, 0xbb, 0xf9, 0x63, 0x29,
-  0x83, 0xd8, 0x3a, 0x14, 0xd1, 0x43, 0x43, 0x66, 0xc7, 0x62, 0xa7, 0x68,
-  0x95, 0x3b, 0xd6, 0xc3, 0x00, 0x85, 0x2b, 0xf3, 0xfe, 0xe2, 0xfc, 0xec,
-  0xe2, 0xd5, 0xb8, 0x33, 0xc7, 0xab, 0x84, 0x84, 0x3e, 0x3e, 0x1f, 0xe1,
-  0x3b, 0xa0, 0x8e, 0xe2, 0x41, 0xb7, 0xec, 0x37, 0x80, 0x65, 0xe8, 0x08,
-  0xb0, 0x69, 0x08, 0xa3, 0x00, 0x7b, 0x10, 0x6d, 0xcb, 0x24, 0xd1, 0x2d,
-  0x41, 0x1d, 0x9c, 0x0b, 0xfb, 0x5e, 0x55, 0x91, 0x52, 0xda, 0x15, 0x3c,
-  0x84, 0xa6, 0x2f, 0x02, 0x18, 0x09, 0x7c, 0xd0, 0xb7, 0x17, 0xfd, 0x9a,
-  0x3a, 0xa9, 0x8d, 0x86, 0x75, 0x1f, 0x92, 0xe2, 0x24, 0xc5, 0xc7, 0xd2,
-  0xb1, 0x6c, 0xa9, 0x1a, 0xbe, 0xd1, 0x87, 0x5e, 0xb7, 0x91, 0x8f, 0x59,
-  0x82, 0x57, 0xf2, 0x6a, 0xb2, 0x59, 0x57, 0x4a, 0x36, 0x49, 0x6e, 0x16,
-  0x85, 0x06, 0xd6, 0xd8, 0x48, 0x26, 0x9b, 0xaf, 0x9e, 0x3e, 0x50, 0x82,
-  0x27, 0xbf, 0x57, 0x9f, 0x57, 0x4f, 0x67, 0x36, 0xb5, 0xf5, 0x9f, 0xe7,
-  0xf1, 0xe9, 0x5c, 0x76, 0x9c, 0xbd, 0x26, 0x33, 0xd4, 0xa1, 0xbb, 0x1c,
-  0x9d, 0x8e, 0xfe, 0x03, 0x51, 0xaa, 0xf2, 0x71, 0xf4, 0x01, 0x00, 0x00
+const uint8_t rule_18758[] =
+{
+0x61, 0x6C, 0x65, 0x72, 0x74, 0x20, 0x74, 0x63, 0x70, 0x20, 0x24, 0x48, 
+0x4F, 0x4D, 0x45, 0x5F, 0x4E, 0x45, 0x54, 0x20, 0x61, 0x6E, 0x79, 0x20, 
+0x2D, 0x3E, 0x20, 0x24, 0x45, 0x58, 0x54, 0x45, 0x52, 0x4E, 0x41, 0x4C, 
+0x5F, 0x4E, 0x45, 0x54, 0x20, 0x24, 0x48, 0x54, 0x54, 0x50, 0x5F, 0x50, 
+0x4F, 0x52, 0x54, 0x53, 0x0A, 0x28, 0x0A, 0x20, 0x20, 0x20, 0x20, 0x6D, 
+0x73, 0x67, 0x3A, 0x22, 0x46, 0x49, 0x4C, 0x45, 0x2D, 0x49, 0x44, 0x45, 
+0x4E, 0x54, 0x49, 0x46, 0x59, 0x20, 0x4D, 0x69, 0x63, 0x72, 0x6F, 0x73, 
+0x6F, 0x66, 0x74, 0x20, 0x57, 0x69, 0x6E, 0x64, 0x6F, 0x77, 0x73, 0x20, 
+0x56, 0x69, 0x73, 0x75, 0x61, 0x6C, 0x20, 0x42, 0x61, 0x73, 0x69, 0x63, 
+0x20, 0x73, 0x63, 0x72, 0x69, 0x70, 0x74, 0x20, 0x66, 0x69, 0x6C, 0x65, 
+0x20, 0x64, 0x6F, 0x77, 0x6E, 0x6C, 0x6F, 0x61, 0x64, 0x20, 0x72, 0x65, 
+0x71, 0x75, 0x65, 0x73, 0x74, 0x22, 0x3B, 0x0A, 0x20, 0x20, 0x20, 0x20, 
+0x6D, 0x65, 0x74, 0x61, 0x64, 0x61, 0x74, 0x61, 0x3A, 0x73, 0x65, 0x72, 
+0x76, 0x69, 0x63, 0x65, 0x20, 0x68, 0x74, 0x74, 0x70, 0x3B, 0x0A, 0x20, 
+0x20, 0x20, 0x20, 0x72, 0x65, 0x66, 0x65, 0x72, 0x65, 0x6E, 0x63, 0x65, 
+0x3A, 0x75, 0x72, 0x6C, 0x2C, 0x65, 0x6E, 0x2E, 0x77, 0x69, 0x6B, 0x69, 
+0x70, 0x65, 0x64, 0x69, 0x61, 0x2E, 0x6F, 0x72, 0x67, 0x2F, 0x77, 0x69, 
+0x6B, 0x69, 0x2F, 0x56, 0x62, 0x73, 0x3B, 0x0A, 0x20, 0x20, 0x20, 0x20, 
+0x63, 0x6C, 0x61, 0x73, 0x73, 0x74, 0x79, 0x70, 0x65, 0x3A, 0x6D, 0x69, 
+0x73, 0x63, 0x2D, 0x61, 0x63, 0x74, 0x69, 0x76, 0x69, 0x74, 0x79, 0x3B, 
+0x0A, 0x20, 0x20, 0x20, 0x20, 0x73, 0x69, 0x64, 0x3A, 0x31, 0x38, 0x37, 
+0x35, 0x38, 0x3B, 0x0A, 0x20, 0x20, 0x20, 0x20, 0x72, 0x65, 0x76, 0x3A, 
+0x38, 0x3B, 0x0A, 0x20, 0x20, 0x20, 0x20, 0x73, 0x6F, 0x69, 0x64, 0x3A, 
+0x33, 0x7C, 0x31, 0x38, 0x37, 0x35, 0x38, 0x3B, 0x0A, 0x23, 0x20, 0x65, 
+0x76, 0x65, 0x72, 0x79, 0x74, 0x68, 0x69, 0x6E, 0x67, 0x20, 0x61, 0x62, 
+0x6F, 0x76, 0x65, 0x20, 0x61, 0x70, 0x70, 0x65, 0x61, 0x72, 0x73, 0x20, 
+0x69, 0x6E, 0x20, 0x73, 0x74, 0x75, 0x62, 0x0A, 0x23, 0x20, 0x74, 0x68, 
+0x65, 0x20, 0x66, 0x6F, 0x6C, 0x6C, 0x6F, 0x77, 0x69, 0x6E, 0x67, 0x20, 
+0x64, 0x65, 0x74, 0x65, 0x63, 0x74, 0x69, 0x6F, 0x6E, 0x20, 0x6F, 0x70, 
+0x74, 0x69, 0x6F, 0x6E, 0x73, 0x20, 0x61, 0x72, 0x65, 0x20, 0x6E, 0x6F, 
+0x74, 0x20, 0x69, 0x6E, 0x20, 0x73, 0x74, 0x75, 0x62, 0x0A, 0x20, 0x20, 
+0x20, 0x20, 0x66, 0x6C, 0x6F, 0x77, 0x3A, 0x74, 0x6F, 0x5F, 0x73, 0x65, 
+0x72, 0x76, 0x65, 0x72, 0x2C, 0x65, 0x73, 0x74, 0x61, 0x62, 0x6C, 0x69, 
+0x73, 0x68, 0x65, 0x64, 0x3B, 0x0A, 0x20, 0x20, 0x20, 0x20, 0x68, 0x74, 
+0x74, 0x70, 0x5F, 0x75, 0x72, 0x69, 0x3B, 0x0A, 0x20, 0x20, 0x20, 0x20, 
+0x63, 0x6F, 0x6E, 0x74, 0x65, 0x6E, 0x74, 0x3A, 0x22, 0x2E, 0x76, 0x62, 
+0x73, 0x22, 0x2C, 0x20, 0x6E, 0x6F, 0x63, 0x61, 0x73, 0x65, 0x3B, 0x0A, 
+0x20, 0x20, 0x20, 0x20, 0x70, 0x63, 0x72, 0x65, 0x3A, 0x22, 0x2F, 0x5C, 
+0x78, 0x32, 0x65, 0x76, 0x62, 0x73, 0x28, 0x5B, 0x5C, 0x3F, 0x5C, 0x78, 
+0x35, 0x63, 0x5C, 0x78, 0x32, 0x66, 0x5D, 0x7C, 0x24, 0x29, 0x2F, 0x73, 
+0x6D, 0x69, 0x22, 0x3B, 0x0A, 0x20, 0x20, 0x20, 0x20, 0x73, 0x6F, 0x3A, 
+0x65, 0x76, 0x61, 0x6C, 0x3B, 0x0A, 0x29, 0x0A, 
 };
-unsigned int sid_18758_gz_len = 372;
+const unsigned rule_18758_len = 0;
